--- a/package.json
+++ b/package.json
@@ -3,13 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
+    "-": "^0.0.1",
+    "@types/jest": "^29.0.3",
+    "@types/node": "^18.7.19",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "axios": "^0.27.2",
+    "easy-peasy": "^5.0.4",
+    "normalize-scss": "^7.0.1",
+    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
+    "react-charts": "^3.0.0-beta.50",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "sass": "^1.54.9",
+    "save": "^2.9.0",
+    "typescript": "^4.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
